@@ -1,3 +1,12 @@
+2013-05-03  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	Workaround for Bug #16
+	* vc-clearcase.el (clearcase-checkout-comment-type): change default to 'none
+	(vc-clearcase-checkout): signal an error if
+	`clearcase-checkout-comment-type' is not 'none
+	(clearcase-bind-checkout-comment): don't add it to
+	`vc-before-checkin-hook'
+
 2012-04-17  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (clearcase-hijack-file-handler): check that the
